# oaie

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
bpf/: Makefile  oaie_events.h  oaie_tracer.bpf.c
crates/oaie-agent/: Cargo.toml
crates/oaie-agent/src/: client.rs  lib.rs  types.rs
crates/oaie-bpf-common/: Cargo.toml
crates/oaie-bpf-common/src/: lib.rs
crates/oaie-cas/: Cargo.toml
crates/oaie-cas/src/: lib.rs  store.rs
crates/oaie-cgroup/: Cargo.toml
crates/oaie-cgroup/src/: bpf_client.rs  cleanup.rs  detect.rs  ebpf_detect.rs  fd_passing.rs  lib.rs  limits.rs  priv_client.rs  scope.rs  stats.rs
crates/oaie-cli/: Cargo.toml  build.rs
crates/oaie-cli/src/: backend_bare.rs  backend_firecracker.rs  backend_interactive.rs  backend_namespace.rs  clean.rs  doctor.rs  lib.rs  main.rs  output.rs  policy_resolve.rs  runner.rs  session_runner.rs  signing.rs  verify.rs  walk.rs
crates/oaie-cli/src/commands/: cas.rs  cat.rs  check.rs  clean.rs  diff.rs  doctor.rs  export.rs  firecracker.rs  init.rs  inspect.rs  key.rs  list.rs  mod.rs  policy.rs  replay.rs  report.rs  run.rs  session.rs  verify.rs
crates/oaie-core/: Cargo.toml
crates/oaie-core/src/: artifact.rs  auto_mount.rs  backend.rs  cgroup.rs  config.rs  error.rs  hash_algo.rs  job.rs  lib.rs  log.rs  manifest.rs  policy.rs  run_dir.rs  run_id.rs  session.rs  signing.rs  store_config.rs  structured_output.rs  verify.rs
crates/oaie-db/: Cargo.toml
crates/oaie-db/src/: lib.rs  postgres_backend.rs  sqlite.rs
crates/oaie-firecracker/: Cargo.toml
crates/oaie-firecracker/src/: api.rs  detect.rs  image.rs  lib.rs  rootfs.rs  vm.rs  vsock.rs  wire.rs
crates/oaie-guest/: Cargo.toml
crates/oaie-guest/src/: main.rs
crates/oaie-mcp/: Cargo.toml
crates/oaie-mcp/src/: jsonrpc.rs  lib.rs  main.rs  tools.rs
crates/oaie-netpol/: Cargo.toml
crates/oaie-netpol/src/: dns_proxy.rs  dns_wire.rs  domain.rs  enforcer.rs  error.rs  lib.rs  nftables.rs  resolve.rs  sni.rs  veth.rs
crates/oaie-observe/: Cargo.toml
crates/oaie-observe/src/: chain.rs  chunked_writer.rs  ebpf_tracer.rs  event.rs  lib.rs  memory.rs  observer.rs  ptrace_tracer.rs  reader.rs  summary.rs  syscall_table.rs  writer.rs
crates/oaie-priv/: Cargo.toml
crates/oaie-priv/src/: audit.rs  bpf.rs  cgroup.rs  fd_passing.rs  lib.rs  main.rs  protocol.rs  validate.rs
crates/oaie-report/: Cargo.toml
crates/oaie-report/src/: lib.rs  report.rs
crates/oaie-sandbox/: Cargo.toml
crates/oaie-sandbox/src/: landlock.rs  lib.rs  mounts.rs  probe.rs  pty.rs  sandbox.rs  seccomp.rs  terminal.rs
crates/oaie-tests/: Cargo.toml
crates/oaie-tests/src/: lib.rs
crates/oaie-tests/tests/: all.rs
crates/oaie-tests/tests/suite/: adversarial_tests.rs  agent_tests.rs  backend_tests.rs  backward_compat_tests.rs  cas_tests.rs  cgroup_tests.rs  core_tests.rs  db_tests.rs  doctor_tests.rs  ebpf_tests.rs  firecracker_tests.rs  integration.rs  interactive_tests.rs  mod.rs  netpol_tests.rs  observe_tests.rs  parity_tests.rs  policy_tests.rs  report_tests.rs  runner_e2e.rs  sandbox_tests.rs  seccomp_tests.rs  session_tests.rs  signing_tests.rs  stress_tests.rs  structured_output_tests.rs  trace_tests.rs  v03_integration_tests.rs  verify_tests.rs
docs/: BACKENDS.md  CHANGELOG.md  CONTAINMENT.md  DESIGN.md  FEATURES.md  NETWORK.md  SECURITY.md  SECURITY_DIAGRAMS.md  SESSIONS.md  TRACING.md  VALIDATION_GUIDE.md
examples/jobs/: analyze-binary.toml  build.toml  echo.toml
examples/policies/: build.toml  contained-cloud.toml  contained-local.toml  network.toml  ping.toml  safe.toml
examples/sessions/: cloud-build-agent.py  contained-cloud.sh  contained-local.sh  contained-strict.sh  interactive-agent.py  local-re-agent.py  simple-agent.py
