[package]
name = "oaie-cas"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Content-addressed store for OAIE artifacts"
authors = ["Dumitru Stama"]

[dependencies]
oaie-core = { path = "../oaie-core" }
uuid = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
