[package]
name = "oaie-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core types, config, and error definitions for OAIE"
authors = ["Dumitru Stama"]

[dependencies]
blake3 = { workspace = true }
sha2 = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true }
