[package]
name = "oaie-db"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Database index for OAIE run and artifact metadata (SQLite + PostgreSQL)"
authors = ["Dumitru Stama"]

[dependencies]
oaie-core = { path = "../oaie-core" }
rusqlite = { workspace = true }
postgres = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
