[package]
name = "oaie-firecracker"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Firecracker microVM backend for OAIE"
authors = ["Dumitru Stama"]

[lib]
name = "oaie_firecracker"
path = "src/lib.rs"

[dependencies]
oaie-core = { path = "../oaie-core" }
serde = { workspace = true }
serde_json = { workspace = true }
libc = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
http-body-util = { workspace = true }
http = { workspace = true }
tempfile = { workspace = true }
