[package]
name = "oaie-netpol"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Network policy enforcement for OAIE sandboxes (allowlist mode)"
authors = ["Dumitru Stama"]

[dependencies]
oaie-core = { path = "../oaie-core" }
libc = { workspace = true }
nix = { workspace = true }
log = "0.4"
ipnet = "2"
